diesel_compile_tests/tests/fail/select_for_update_no_wait_cannot_be_used_on_sqlite.stderr
error[E0277]: `diesel::query_builder::locking_clause::ForUpdate` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/select_for_update_no_wait_cannot_be_used_on_sqlite.rs:17:15
     |
17   |         .load(&mut conn)
     |          ---- ^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `diesel::query_builder::locking_clause::ForUpdate`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `diesel::query_builder::locking_clause::ForUpdate` implements `QueryFragment<Mysql>`
               `diesel::query_builder::locking_clause::ForUpdate` implements `QueryFragment<Pg>`
     = note: required for `LockingClause<ForUpdate, NoWait>` to implement `QueryFragment<Sqlite>`
     = note: 2 redundant requirements hidden
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ..., ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, SqliteConnection, _>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     
error[E0277]: `diesel::query_builder::locking_clause::NoWait` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/select_for_update_no_wait_cannot_be_used_on_sqlite.rs:17:15
     |
17   |         .load(&mut conn)
     |          ---- ^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `diesel::query_builder::locking_clause::NoWait`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `diesel::query_builder::locking_clause::NoWait` implements `QueryFragment<Mysql>`
               `diesel::query_builder::locking_clause::NoWait` implements `QueryFragment<Pg>`
     = note: required for `LockingClause<ForUpdate, NoWait>` to implement `QueryFragment<Sqlite>`
     = note: 2 redundant requirements hidden
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ..., ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, SqliteConnection, _>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     For more information about this error, try `rustc --explain E0277`.
